<resources>
    <string name="app_name">Calculator</string>
    <string name="bagi">/</string>
    <string name="kali">x</string>
    <string name="min">-</string>
    <string name="tambah">+</string>
    <string name="clear">C</string>
    <string name="delete">DEL</string>
    <string name="samadengan">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="example_result">45</string>
    <string name="example_operation">23 + 22</string>
</resources>